openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: knowledge-access-analytics-service
  labels:
    app: knowledge-access-analytics
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: knowledge-access-analytics
